# slist

./: .travis.yml  CHANGELOG.md  README.md  slist.cabal  stack.yaml
.github/workflows/: ci.yml
src/: Slist.hs
src/Slist/: Containers.hs  Maybe.hs  Size.hs  Type.hs
test/: Doctest.hs  Spec.hs
test/Test/Slist/: Size.hs
