cabal-version:       2.4
name:                slist
version:             0.2.1.0
synopsis:            Sized list
description:         This package implements @Slist@ data structure that stores the size
                     of the list along with the list itself.
homepage:            https://github.com/kowainik/slist
bug-reports:         https://github.com/kowainik/slist/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2019-2020 Veronika Romashkina
                     2020-2022 Kowainik
category:            Data Structures, List
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.4
                   , GHC == 9.4.2

source-repository head
  type:                git
  location:            https://github.com/kowainik/slist.git

common common-options
  build-depends:       base >= 4.10.1.0 && < 4.21

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies
  if impl(ghc >= 8.10.1)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace

  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       containers >= 0.5 && <= 0.7
  hs-source-dirs:      src
  exposed-modules:     Slist
                         Slist.Containers
                         Slist.Maybe
                         Slist.Size
                         Slist.Type

test-suite slist-doctest
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs
  build-depends:       doctest
                     , Glob
  ghc-options:         -threaded

test-suite slist-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Slist.Size
  build-depends:       slist
                     , hedgehog >= 1.0 && < 1.3
                     , hspec
                     , hspec-hedgehog ^>= 0.0.1
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
